<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="@color/fondo_app">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pantalla_pagar_titulo"
        android:textStyle="bold"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_marginBottom="16dp"/>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/productos"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"/>

    <ListView
        android:id="@+id/listViewProductosPagar"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/textTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/metodo_pago"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"/>

    <Spinner
        android:id="@+id/spinnerMetodoPago"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"/>

    <LinearLayout
        android:id="@+id/layoutTarjeta"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginBottom="16dp">

        <EditText
            android:id="@+id/editNumeroTarjeta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Número de tarjeta"
            android:inputType="number"/>

        <EditText
            android:id="@+id/editNombreTarjeta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Nombre en la tarjeta"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnPagar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pagar"
        android:background="@drawable/boton_moderno"
        android:textColor="@color/boton_texto"/>
</LinearLayout>