<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="@color/fondo_app">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/historial_reservas"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/listViewHistorial"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/btnEliminarReserva"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/boton_moderno"
            android:text="@string/eliminar_reserva"
            android:textColor="@color/boton_texto"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/btnIrAPagar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/boton_moderno"
            android:text="@string/ir_a_pagar"
            android:textColor="@color/boton_texto"
            android:layout_marginStart="8dp" />
    </LinearLayout>
</LinearLayout>